[metadata]
name = timeawarepc
version = 1.2.3
author = Rahul Biswas
author_email = rahul.biswas@ucsf.edu
description = Time-Aware PC Python Package
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
url = https://github.com/biswasr/TimeAwarePC
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = ==3.10.*
install_requires =
    numpy
    pandas
    rpy2==3.5.11
    networkx
    scipy

[options.packages.find]
where = .

[bdist_wheel]
universal = 1
